fixed the safari main image overflow

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ a {
 .main_image {
   display: flex;
   justify-content: center;
-  margin-top: -100em;
+  margin-top: -200px;
 }
 
 .main_image img {
